==> wangqc39/EssEvSoco/Frimware/SDK15.3/examples/ble_peripheral/ble_app_buttonless_dfu/MotorSpeed.c <==
#include "common.h"
#include "MotorSpeed.h"
#include "Engine.h"
#include "ActionTick.h"
#include "MotorSpeedHal.h"
#include "nrf_saadc.h"
#include "nrf_gpio.h"
#include "nrf_ppi.h"
#define PIN_HOLD                3
#define ADC_CHANNEL_TH          0
#define ADC_INPUT_TH          NRF_SAADC_INPUT_AIN4
#define ADC_TH_GAIN_SET       NRF_SAADC_GAIN1_6
#define ADC_TH_GAIN             6
#define EV_HOLD_SPEED			80
#define EV_OVER_HOLD_TIME		2000 * TIMER_MULTI
#define EV_SPEED_TO_HOLD_RATE    5 * TIMER_MULTI
#define EV_SPEED1_SPEED_PERCENT					64
#define EV_SPEED2_SPEED_PERCENT					80
#define EV_ACC_RATIO_SPEED1					10
#define EV_ACC_RATIO_SPEED2					9
#define EV_ACC_RATIO_SPEED3					8
#define EV_HOLD_BUTTON			nrf_gpio_pin_read(PIN_HOLD)//GPIO_ReadInputDataBit(GPIOA, GPIO_Pin_9)
#define BREAK_IN_AREA_TIME_GATE			500  //单位ms
#define MAX_SPEED_PERCENT_IN_MAX_GEAR				80  //单位%
#define UP_GEAR_THROTTLE_PERCENT			95
#define DOWN_GEAR_THROTTLE_PERCENT		50

void EvMotorSpeedHwInit()
{
    AdcContinueModeInit();
    




    nrf_gpio_cfg_input(PIN_HOLD, NRF_GPIO_PIN_NOPULL);
    //GPIO_InitStructure.GPIO_Pin =  GPIO_Pin_9;
    //GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    //GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
    //GPIO_Init(GPIOA, &GPIO_InitStructure);

/*
    GPIO_InitStructure.GPIO_Pin =  GPIO_Pin_8 | GPIO_Pin_9;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
    GPIO_Init(GPIOC, &GPIO_InitStructure);
*/
}
